# RecentPapers

./: .env.example  .gitignore  CLAUDE.md  ai.py  com.erdes.scholar_to_notion.plist  config.py  gmail.py  notion.py  pdf.py  pyproject.toml  scholar_to_notion.py
.github/workflows/: main.yml
